# askmydocs

./: .gitignore  README.md
.docker/: database.sh
askmydocs-api/: pyproject.toml
askmydocs-api/app/: main.py
askmydocs-api/app/api/: routes_docs.py
askmydocs-backend/: pyproject.toml
askmydocs-backend/.docker/: qdrant_init.sh
askmydocs-backend/src/askmydocs_backend/chunking/: splitter.py
askmydocs-backend/src/askmydocs_backend/core/: functional.py
askmydocs-backend/src/askmydocs_backend/domain/: document.py
askmydocs-backend/src/askmydocs_backend/embeddings/: embedder.py
askmydocs-backend/src/askmydocs_backend/ingestion/: pdf_loader.py
askmydocs-backend/src/askmydocs_backend/interface/: api.py  cli.py
askmydocs-backend/src/askmydocs_backend/interface/routes/: documents_routes.py
askmydocs-backend/src/askmydocs_backend/llm/: openai_llm.py
askmydocs-backend/src/askmydocs_backend/pipeline/: ask_documents.py  delete_collections.py  index_documents.py
askmydocs-backend/src/askmydocs_backend/vectorstore/: qdrant_store.py
askmydocs-backend/tests/chunking/: test_splitter.py
askmydocs-backend/tests/embeddings/: test_embedder.py
askmydocs-backend/tests/ingestion/: test_pdf_loader.py
askmydocs-frontend/: package.json  tailwind.config.js
askmydocs-frontend/src/: App.tsx
askmydocs-frontend/src/components/Layout/: Layout.tsx
askmydocs-frontend/src/components/Sidebar/: Sidebar.tsx
askmydocs-frontend/src/components/UploadArea/: UploadArea.tsx
askmydocs-frontend/src/pages/: Home.tsx  NotFound.tsx
