[project]
name = "askmydocs-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "JVitoroliv3ira",email = "jvitoroliveira0711@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "typer (>=0.16.0,<0.17.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "expression (>=5.6.0,<6.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)"
]

[tool.poetry]
packages = [{include = "askmydocs_backend", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
